--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@banksheets/mcp-server": "^1.0.0",
     "@modelcontextprotocol/sdk": "^1.17.3",
     "axios": "^1.6.0"
   },
