--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@banksheets/mcp-server",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "MCP server for Bank Sheets - access financial data through Model Context Protocol",
   "main": "dist/index.js",
   "bin": {
@@ -26,7 +26,7 @@
     "google-sheets"
   ],
   "author": "Bank Sheets Team",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "repository": {
     "type": "git",
     "url": "https://github.com/banksheets/mcp-server"
@@ -35,7 +35,6 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@banksheets/mcp-server": "^1.0.0",
     "@modelcontextprotocol/sdk": "^1.17.3",
     "axios": "^1.6.0"
   },
